--- a/ur5_moveit_config/config/ros_controllers.yaml
+++ b/ur5_moveit_config/config/ros_controllers.yaml
@@ -80,6 +80,21 @@ ur5_arm_controller:
       d: 1
       i: 0.1
       i_clamp: 100
+  constraints:
+    goal_time: 5.0
+    stopped_velocity_tolerance: 0.01
+    shoulder_pan_joint:
+      goal_tolerance: 0.005
+    shoulder_lift_joint:
+      goal_tolerance: 0.005
+    elbow_joint:
+      goal_tolerance: 0.005
+    wrist_1_joint:
+      goal_tolerance: 0.005
+    wrist_2_joint:
+      goal_tolerance: 0.005
+    wrist_3_joint:
+      goal_tolerance: 0.005
 gripper_controller:
   type: effort_controllers/JointTrajectoryController
   joints:
@@ -90,3 +105,5 @@ gripper_controller:
       d: 0
       i: 0
       i_clamp: 1
+trajectory_execution:
+  allowed_goal_tolerance: 0.005
